--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -2,6 +2,18 @@
 body {
     overscroll-behavior: none;
 }
+.LoginSpinny{
+    position:absolute;
+    margin:7.4% 0% 0% 49%;
+}
+.RegisterSpinny{
+    position:absolute;
+    margin:7.4% 0% 0% 49%;
+}
+.GenerateSpinny{
+    position:absolute;
+    margin:7.4% 0% 0% 47%;
+}
 .Body{
     position:absolute;
     background-image:linear-gradient(#161b22,#000000);
@@ -527,7 +539,7 @@ body {
     color:#3fb950;
     position:absolute;
     font-family:Arial,Monospace,sans-serif;
-    margin:15vw 0 0 42vw;
+    margin:15vw 0 0 41.5vw;
     font-size:1vw;
 }
 .DeleteFailure{
